[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Oponente.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=4]
[ext_resource path="res://Fonts/poetsen.ttf" type="DynamicFontData" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 960, 50 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50, 540 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 5 )

[node name="level" type="Node2D"]
script = ExtResource( 4 )

[node name="Techo" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Techo"]
position = Vector2( 960, -50 )
shape = SubResource( 1 )

[node name="Suelo" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Suelo"]
position = Vector2( 960, 1130 )
shape = SubResource( 1 )

[node name="AreaPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaPlayer"]
position = Vector2( -50, 540 )
shape = SubResource( 2 )

[node name="AreaOponente" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaOponente"]
position = Vector2( 1970, 540 )
shape = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 50, 460 )

[node name="Oponente" parent="." instance=ExtResource( 1 )]
position = Vector2( 1850, 460 )
script = ExtResource( 3 )

[node name="MarcadoPlayer" type="Label" parent="."]
margin_left = -200.0
margin_right = 1920.0
margin_bottom = 1080.0
custom_colors/font_color = Color( 0.933333, 0.47451, 0.0705882, 1 )
custom_fonts/font = SubResource( 3 )
text = "Player"
align = 1
valign = 1

[node name="MarcadoOponente" type="Label" parent="."]
margin_left = 60.0
margin_right = 2120.0
margin_bottom = 1080.0
custom_colors/font_color = Color( 0.933333, 0.47451, 0.0705882, 1 )
custom_fonts/font = SubResource( 3 )
text = "Oponente"
align = 1
valign = 1

[node name="Ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 960, 540 )

[node name="RestartTimer" type="Timer" parent="."]

[connection signal="body_entered" from="AreaPlayer" to="." method="_on_AreaPlayer_body_entered"]
[connection signal="body_entered" from="AreaOponente" to="." method="_on_AreaOponente_body_entered"]
[connection signal="timeout" from="RestartTimer" to="Ball" method="_on_RestartTimer_timeout"]
